infra/argocd/repo-server-network.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      containers:
        - name: argocd-repo-server
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
