infra/argocd/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.asmglobal.cloud`)
      kind: Rule
      services:
        - name: argocd-server
          port: 443
  tls:
    certResolver: cloudflare
